feat: task update, comments and mentions
